force-app/main/default/objects/POD__c/POD__c.object-meta.xml
<CustomObject>
    <label>POD</label>
    <nameField>
        <label>POD No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PODs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>