force-app/main/default/objects/POD__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <displayFormat>Order No - {000000}</displayFormat>
    <label>Order No</label>
    <type>AutoNumber</type>
</CustomField>