force-app/main/default/objects/POD__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IND1</fullName>
            </value>
            <value>
                <fullName>IND2</fullName>
            </value>
            <value>
                <fullName>IND3</fullName>
            </value>
            <value>
                <fullName>PAK1</fullName>
            </value>
            <value>
                <fullName>PAK2</fullName>
            </value>
            <value>
                <fullName>PAK3</fullName>
            </value>
            <value>
                <fullName>Aus1</fullName>
            </value>
            <value>
                <fullName>Aus2</fullName>
            </value>
            <value>
                <fullName>Aus3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>